--- a/style.css
+++ b/style.css
@@ -1,36 +1,30 @@
 body{
     background-color: rgb(83, 80, 80);
 }
-.imagen{
-    display: block;
-    margin: auto;
-    border-radius: 8px;
-}
-textarea{
-    background-color: rgb(158, 158, 158);
-}
-.background-y-texto{
+.background-texto-botones{
     display: flex;
     Justify-content: center;
     align-items: center;
+    padding-top: 3rem;
 }
-.caja-de-texto{
-    position: absolute;
-    top: 50px;
+.imagen{
+    background-image: url(imagenes/fondo.jpg);
+    width: 38rem;
+    height: 26rem;
+    top: 10rem;
+    border-radius: 5px;
+    background-repeat: no-repeat;
 }
 .casilla-de-texto{
-    position: absolute;
-    top: 50%;
+    background-color: rgb(158, 158, 158);
+    position: relative;
+    width: 80%;
+    height: 75%;
     left: 50%;
+    top: 45%;
     transform: translate(-50%, -50%);
-    width: 85%;
-    height: 85%; /*Esto lo centra en la mitad de la pantalla*/
     outline: none; /*Esto le saca el borde negro exterior*/
-    resize: none;
     resize: none; /*Impide que el textarea permita modificar su tamaño*/
     border-radius: 3px;
 }
-.botones-de-funcion{
-    margin: 0 auto;
-    display: block;
-}
+
