--- a/style.css
+++ b/style.css
@@ -52,11 +52,24 @@ body {
     border-radius: 6px;
 }
 .mensaje{
-    background-color: white;
     font: normal 13px/100% Raleway, Verdana, Arial;
     cursor: text;
     display: flex;
     Justify-content: center;
     align-items: center;
-    padding-top: 3rem;
+    padding: 2rem;
+}
+.mensaje-mostrado{
+    background-color: rgb(175, 175, 175);
+    outline: none;
+    resize: none;
+    border-radius: 6px;
+    width: 45rem;
+    height: 10rem;
+}
+.boton-copiar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
