--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import{font-family: 'Roboto', sans-serif;
 }
+
 body {
     background-color: rgb(46, 45, 45);
 }
@@ -10,7 +11,7 @@ body {
     padding-top: 3rem;
 }
 .imagen {
-    background-image: url(imagenes/fondo.jpg);
+    background-image: url(imagenes/fondo-texto-a-encriptar.jpg);
     background-size: cover;
     /* propiedad para hacer que la imagen ocupe todo el contedor, en caso contrario por más ancho o largo que le demos a este contenedor la imagen no va a crecer más que su tamaño base */
     width: 50rem;
@@ -57,19 +58,34 @@ body {
     display: flex;
     Justify-content: center;
     align-items: center;
-    padding: 2rem;
+    padding-top: 2rem;
 }
 .mensaje-mostrado{
-    background-color: rgb(175, 175, 175);
+    background-image: url(imagenes/fondo-de-mensaje.jpg);
     outline: none;
     resize: none;
     border-radius: 6px;
     width: 45rem;
     height: 10rem;
+    color: white;
+    font-weight: bold;
 }
 .boton-copiar{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font: normal 13px/100% Raleway, Verdana, Arial;
+    margin: 0.5rem 0 1rem 0;
+    outline: none;
+}
+.copiar{
+    background-color: #8b8b8b;
+    background-color: #424242;
+    box-shadow: 3px 1px 3px 1px #000000;
+    color: rgb(0, 0, 0);
+    font: normal 13px/100% Raleway, Verdana, Arial;
+    border-radius: 6px;
+    width: 10rem;
+    height: 2rem;
 }
