--- a/style.css
+++ b/style.css
@@ -52,40 +52,56 @@ body {
     font: normal 13px/100% Raleway, Verdana, Arial;
     border-radius: 6px;
 }
-.mensaje{
-    font: normal 13px/100% Raleway, Verdana, Arial;
-    cursor: text;
+.mensaje-y-copiar {
     display: flex;
     Justify-content: center;
     align-items: center;
     padding-top: 2rem;
 }
-.mensaje-mostrado{
+.fondo-de-mensaje{
     background-image: url(imagenes/fondo-de-mensaje.jpg);
+    background-size: cover;
+    width: 45.4rem;
+    height: 10.4rem;
+    border-radius: 5px;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 10px 4px 10px 4px #000000;
+    left: 50%;
+    right: 50%;
+    margin-bottom: 2rem;
+}
+.mensaje-mostrado{
+    background-color: rgba(255, 255, 255, 0.575);
+    color: black;
     outline: none;
     resize: none;
     border-radius: 6px;
     width: 45rem;
     height: 10rem;
-    color: white;
     font-weight: bold;
+    margin-top: 3.2rem;
 }
-.boton-copiar{
+.copiar{
+    display: flex;
+    outline: none;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font: normal 13px/100% Raleway, Verdana, Arial;
-    margin: 0.5rem 0 1rem 0;
-    outline: none;
+    margin-top: 1rem;
 }
-.copiar{
-    background-color: #8b8b8b;
+.boton-copiar{
     background-color: #424242;
     box-shadow: 3px 1px 3px 1px #000000;
     color: rgb(0, 0, 0);
+    cursor: pointer;
+    text-align: center;
+    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+    padding: 0.5rem 2.5rem;
     font: normal 13px/100% Raleway, Verdana, Arial;
     border-radius: 6px;
-    width: 10rem;
-    height: 2rem;
 }
