--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ body {
     border-radius: 3px;
     width: 90%;
     height: 70%;
+    margin-top: 0.8rem;
+    padding: 1rem;
 }
 .botones {
     display: flex;
@@ -51,12 +53,26 @@ body {
     padding: 0.5rem 2.5rem;
     font: normal 13px/100% Raleway, Verdana, Arial;
     border-radius: 6px;
+    transition: 1000ms;
+}
+#boton-encriptar:hover{
+    background-color: #42424296;
+}
+#boton-encriptar:active{
+    background-color: rgba(255, 255, 255, 0.548);
+}
+#boton-desencriptar:hover{
+    background-color: #42424296;
+}
+#boton-desencriptar:active{
+    background-color: rgba(255, 255, 255, 0.548);
 }
 .mensaje-y-copiar {
     display: flex;
     Justify-content: center;
     align-items: center;
     padding-top: 2rem;
+    margin-bottom: 3rem;
 }
 .fondo-de-mensaje{
     background-image: url(imagenes/fondo-de-mensaje.jpg);
@@ -70,9 +86,8 @@ body {
     align-items: center;
     justify-content: center;
     box-shadow: 10px 4px 10px 4px #000000;
-    left: 50%;
-    right: 50%;
     margin-bottom: 2rem;
+    padding: 0.8rem;
 }
 .mensaje-mostrado{
     background-color: rgba(255, 255, 255, 0.575);
@@ -84,9 +99,9 @@ body {
     height: 10rem;
     font-weight: bold;
     margin-top: 3.2rem;
+    padding: 1rem;
 }
 .copiar{
-    display: flex;
     outline: none;
     display: flex;
     flex-direction: column;
@@ -104,4 +119,25 @@ body {
     padding: 0.5rem 2.5rem;
     font: normal 13px/100% Raleway, Verdana, Arial;
     border-radius: 6px;
+    transition: 1000ms;
+}
+.boton-copiar:hover{
+    background-color: #42424296;
+}
+.boton-copiar:active{
+    background-color: rgba(255, 255, 255, 0.288);
+}
+footer{
+    background: linear-gradient(rgb(46, 45, 45), black);
+    padding: 40px;
+}
+.copyright{
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    padding: 3rem;
 }
